@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2004, 2012 QNX Software Systems and others.
+ * Copyright (c) 2004, 2016 QNX Software Systems and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -105,7 +105,7 @@ public class ProcessPrompter implements IStatusHandler {
 		if (dialog.open() == Window.OK) {
 			IProcessInfo info = (IProcessInfo)dialog.getFirstResult();
 			if (info != null) {
-				return new Integer(info.getPid());
+				return Integer.valueOf(info.getPid());
 			}
 		}
 		return null;
